package com.arygm.quickfix.ressources

// Like R, but C
object C {
  object Tag {
    // QuickFixTextFieldCustom
    const val main_container_text_field_custom = "main_container_text_field_custom"
    const val group_icon_custom_text_field = "group_icon_custom_text_field"
    const val icon_custom_text_field = "icon_custom_text_field"
    const val container_text_field_custom = "container_text_field_custom"
    const val text_field_custom = "text_field_custom"
    const val place_holder_text_field_custom = "place_holder_text_field_custom"
    const val clear_button_text_field_custom = "clear_button_text_field_custom"
    const val clear_icon_text_field_custom = "clear_icon_text_field_custom"

    // Home Screen
    const val home_content = "homeContent"
    const val notification = "notification"

    // ExpandableCategoryItem
    const val expandableCategoryItem = "expandableCategoryItem"
    const val subCategories = "subCategories"
    const val enterSubCateIcon = "enterSubCateIcon"
    const val subCategoryName = "subCategoryName"

    // UpgradeToWorker Screen
    const val upgradeToWorkerPager = "upgradeToWorkerPager"
    const val upgradeToWorkerTopBar = "upgradeToWorkerTopBar"
    const val upgradeToWorkerScaffold = "upgradeToWorkerScaffold"
    const val upgradeToWorkerPersonalInfo = "upgradeToWorkerPersonalInfo"

    // PersonalInfoScreen
    const val personalInfoScreendisplayNameField = "personalInfoScreen_displayNameField"
    const val personalInfoScreendescriptionField = "personalInfoScreen_descriptionField"
    const val personalInfoScreencancelButton = "personalInfoScreen_cancelButton"
    const val personalInfoScreencontinueButton = "personalInfoScreen_continueButton"
    const val personalInfoScreenSectionDescription = "personalInfoScreen_sectionDescription"
    const val personalInfoScreenSectionTitle = "personalInfoScreen_sectionTitle"
    const val personalInfoScreenprofilePictureField = "personalInfoScreen_profilePictureField"
    const val personalInfoScreenprofilePictureBackground =
        "personalInfoScreen_profilePictureBackground"
    const val personalInfoScreenprofilePicture = "personalInfoScreen_profilePicture"
    const val personalInfoScreenBannerPictureBackground =
        "personalInfoScreen_bannerPictureBackground"
    const val personalInfoScreenBannerPictureField = "personalInfoScreen_bannerPictureField"
    const val personalInfoScreenBannerPicture = "personalInfoScreen_bannerPicture"
    const val cameraBottomSheet = "personalInfoScreen_cameraBottomSheet"
    const val personalInfoScreenLoactionDropdownMenu = "personalInfoScreen_locationDropdownMenu"
    const val personalInfoScreenLocationField = "personalInfoScreen_locationField"
    const val professionalInfoScreenLocationDropdownMenuItem = "professionalInfoScreen_locationItem"

    // ProfessionalInfoScreen
    const val professionalInfoScreenSectionTitle = "professionalInfoScreen_sectionTitle"
    const val professionalInfoScreenSectionDescription = "professionalInfoScreen_sectionDescription"
    const val professionalInfoScreenCategoryField = "professionalInfoScreen_categoryField"
    const val professionalInfoScreenSubcategoryField = "professionalInfoScreen_subcategoryField"
    const val professionalInfoScreenSubcategoryDropdownMenu =
        "professionalInfoScreen_dropDownSubcate"
    const val professionalInfoScreenCategoryDropdownMenu = "professionalInfoScreen_dropDownCate"
    const val professionalInfoScreenIncludedServicesList =
        "professionalInfoScreen_includedServicesList"
    const val professionalInfoScreenAddOnServicesList = "professionalInfoScreen_addOnServicesList"
    const val professionalInfoScreenCategoryDropdownMenuItem =
        "professionalInfoScreen_dropDownCateItem"
    const val professionalInfoScreenSubcategoryDropdownMenuItem =
        "professionalInfoScreen_dropDownSubcateItem"
    const val professionalInfoScreenTagsList = "professionalInfoScreen_tagsList"
    const val professionalInfoScreenPriceField = "professionalInfoScreen_priceField"
    const val professionalInfoScreenSectionScale = "professionalInfoScreen_sectionScale"
    const val professionalInfoScreenLabelReferencePrice =
        "professionalInfoScreen_labelReferencePrice"
    const val professionalInfoScreencancelButton = "professionalInfoScreen_cancelButton"
    const val professionalInfoScreencontinueButton = "professionalInfoScreen_continueButton"

    // QuickFixCheckedList
    const val quickFixCheckedListElement = "quickFixCheckedListElement"
    const val quickFixCheckedListElementRight = "quickFixCheckedListElementRight"
    const val quickFixCheckedListElementLeft = "quickFixCheckedListElementLeft"
    const val quickFixCheckedListElementDivider = "quickFixCheckedListElementDivider"
    const val quickFixCheckedListTextFieldElement = "quickFixCheckedListTextFieldElement"
    const val quickFixCheckedListTextFieldElementDelete =
        "quickFixCheckedListTextFieldElementDelete"
    const val quickFixCheckedListTextFieldElementAdd = "quickFixCheckedListTextFieldElementAdd"
    const val quickFixCheckedListOk = "quickFixCheckedListOk"
    const val quickFixCheckedListReset = "quickFixCheckedListReset"
    const val quickFixCheckedListEdit = "quickFixCheckedListEdit"

    // quickfix
    const val quickFixUploadPictures = "quickFixUploadPictures"

    // WelcomeOnBoardScreen
    const val welcomeOnBoardScreenStayUserButton = "welcomeOnBoardScreenStayUserButton"
    const val welcomeOnBoardScreenSwitchWorkerButton = "welcomeOnBoardScreenSwitchWorkerButton"
    const val welcomeOnBoardScreenImage = "welcomeOnBoardScreenImage"

    // Profile screen
    const val workerModeSwitch = "workerModeSwitch"
    const val workerModeSwitchText = "workerModeSwitchText"
    const val buttonSwitch = "buttonSwitch"
  }
}
