...
}

data class Scale(val longScale: String, val shortScale: String)

fun getCategoryIcon(category: Category): ImageVector {
  return when (category.name) {
    "Plumbing" -> Icons.Outlined.Plumbing
    "Electrical Work" -> Icons.Outlined.ElectricalServices
    "Carpentry" -> Icons.Outlined.Carpenter
    "Painting" -> Icons.Outlined.ImagesearchRoller
    "Cleaning Services" -> Icons.Outlined.CleaningServices
    "Gardening" -> Icons.Outlined.NaturePeople
    "Handyman Services" -> Icons.Outlined.Handyman
...
