...
                      fontWeight = FontWeight.Bold,
                      fontFamily = poppinsFontFamily,
                      color = colorScheme.onSurface)
                }
                Row(verticalAlignment = Alignment.Bottom) {
                  Text(
                      text = "CHF",
                      fontSize = 13.sp,
                      fontWeight = FontWeight.SemiBold,
                      lineHeight = 20.sp,
                      color = colorScheme.onBackground)
                  Text(
                      text = price,
...
